<resources>
    <string name="app_name">Calk</string>
    <string name="calk_default">0</string>
    <string name="c">C</string>
    <string name="change_sign">+/-</string>
    <string name="percent">%</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="x">X</string>
    <string name="slash">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="Sh">Ш</string>
    <string name="O">О</string>
    <string name="P">П</string>
    <string name="a">A</string>
    <string name="SH">Ш</string>
    <string name="V">В</string>
    <string name="L">Л</string>
</resources>
